[package]
name = "crab"
version = "0.1.0"
edition = "2018"

[dependencies]
async-stream = "0.3.2"
serde_json = "1"
derive_builder = "0.10.2"
futures-core = "0.3.16"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.4"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]
